<resources>
    <string name="app_name">THViet</string>


    <string name="facebook_app_id">703777520414319</string>
    <string name="fb_login_protocol_scheme">fb703777520414319</string>


    <string name="enterPhoneHint">Nhập số đi động</string>
    <string name="password_otp">Nhập mật khẩu</string>

    <string name="sendOTPTextView"><u>Gửi lại mã OTP</u></string>
    <string name="passwordTextview">Mật khẩu bao gồm 6 kí tự số trở lên</string>
    <string name="forgotPasswordTextView"><u>Quên mật khẩu?</u></string>
    <string name="registerTextView"><u>Đăng ký ngay!</u></string>
    <string name="resendOTP"><u>Gửi lại OTP</u></string>
    <string name="continueText">Tiếp tục</string>

    //final variable
    <string name="TAG_FB">FacebookLogin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_debit">Sổ nợ</string>
    <string name="title_account">Cá nhân</string>
    <string name="search_hint">mã, tên khách hàng,...</string>
    <string name="InputDebtMoney">Nhập số tiền trả</string>

</resources>
