<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.koit.capstonproject_version_1.View.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_debit"
        android:name="com.koit.capstonproject_version_1.View.ui.debit.DebitFragment"
        android:label="@string/title_debit"
        tools:layout="@layout/fragment_debit" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.koit.capstonproject_version_1.View.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>